--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin-right: 0;
+  margin-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-family: Inter;
+}
+:root {
+  --sidbar-bg: #364066;
+  --text-color: #928ea0;
+  --logo-color: #a3a3d9;
+  --text-change-page-color: #364066 80%;
+  --text-hover-color: #fff;
+  --text-bg-hover-color: #a3a3d9 16%;
+  --text-b-b: #5248ac;
+  --bg-login: #131725;
+  --nav-link-hover: #5248ac;
+  --nav-bg-hover: #5248ac31;
+  --nav-text-shift: rgba(54, 64, 102, 0.8);
+}
+.link {
+  text-decoration: none;
+  color: #ccc;
+}
+.link:active {
+  color: var(--text-color);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+li {
+  list-style: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content-app {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
 }
-
-.App-link {
-  color: #61dafb;
+.sidbar-content {
+  width: 16rem;
+  height: 100vh;
+  /* background: radial-gradient(
+    151.88% 64.7% at 0% 35.3%,
+    rgba(83, 83, 83, 0.64) 0.55%,
+    rgba(0, 0, 0, 0.64) 100%
+  ); */
+  background-color: #1a1e2c;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-and-header {
+  width: 80%;
 }
